k8s/manifests/00-namespace.yaml
# yaml file to create a namespace

apiVersion: v1
kind: Namespace
metadata:
  name: cetha
