k8s/manifests/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cetha-ingress
  namespace: cetha
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: cetha-api.utibeokon.me
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: cetha-service
                port:
                  number: 80
